[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkreconx"
version = "0.1.0"
description = "Modular OSINT reconnaissance framework with Tor support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DarkReconX Contributors"}
]
dependencies = [
    "requests>=2.31.0",
    "PySocks>=1.7.1",
    "stem>=1.8.2",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyfiglet>=1.0.2",
    "pyyaml>=6.0.1",
    "python-whois>=0.9.4",
    "dnspython>=2.6.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
# Ensure the project root is in sys.path for imports
pythonpath = ["."]

[tool.setuptools]
packages = ["core", "config", "modules", "cli", "api"]
